--- a/app/static/dashboard.html
+++ b/app/static/dashboard.html
@@ -7,12 +7,34 @@
     <link href="/static/css/tailwind.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <style>
-        html {
+        html{
             text-size-adjust: 100%;
             -webkit-text-size-adjust: 100%;
         }
     </style>
     <script>
+        async function fetchMetrics() {
+            const response = await fetch('/admin/metrics');
+            const data = await response.text();
+            const metrics = {};
+            data.split('\n').forEach(line => {
+                if (line.startsWith('total_requests_total')) {
+                    metrics.totalRequests = line.split(' ')[1];
+                } else if (line.startsWith('requests_by_status_total')) {
+                    const parts = line.split('{');
+                    const status = parts[1].split('}')[0].split('"')[1];
+                    const count = parts[1].split(' ')[1];
+                    metrics[`status${status}`] = count;
+                } else if (line.startsWith('average_latency_seconds')) {
+                    metrics.averageLatency = line.split(' ')[1];
+                }
+            });
+
+            document.getElementById('totalRequests').textContent = metrics.totalRequests || 'N/A';
+            document.getElementById('totalRequests200').textContent = metrics.status200 || 'N/A';
+            document.getElementById('totalRequests403').textContent = metrics.status403 || 'N/A';
+            document.getElementById('averageLatency').textContent = metrics.averageLatency || 'N/A';
+        }
         async function fetchLogs() {
             const response = await fetch('/admin/logs');
             const data = await response.json();
@@ -39,7 +61,7 @@
                     <td class="px-6 py-4">${log.country_code}</td>
                     <td class="px-6 py-4">
                         <button onclick="whitelistIP('${log.ip_address}')" 
-                                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                                class="bg-blue-600 hover:bg-blue-800 text-white font-bold py-2 px-4 rounded transition-all duration-300 ease-in-out">
                             Whitelist
                         </button>
                     </td>
@@ -65,32 +87,60 @@
         // Initial fetch
         document.addEventListener('DOMContentLoaded', fetchLogs);
     </script>
-</head>
-<body class="bg-gray-100">
-    <div class="container mx-auto px-4 py-8">
-        <h1 class="text-3xl font-bold mb-8">SentinelShield Admin Dashboard</h1>
+    <script>
+        // Fetch logs every 5 seconds
+        setInterval(fetchMetrics, 5000);
         
-        <div class="bg-white shadow-md rounded-lg overflow-hidden">
+        // Initial fetch
+        document.addEventListener('DOMContentLoaded', fetchMetrics);
+    </script>
+
+    </head> 
+<body class="bg-gray-200 font-sans">
+    <div class="container mx-auto px-4 py-8">
+        <h1 class="text-4xl font-bold mb-8">SentinelShield Admin Dashboard</h1>
+
+         <!-- Metrics Section -->
+         <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8">
+            <div class="bg-white shadow-xl rounded-xl py-8 px-8 mb-6">
+                <h2 class="text-2xl font-bold mb-2">Total Requests</h2>
+                <p id="totalRequests" class="text-3xl font-bold">Loading...</p>
+            </div>
+            <div class="bg-white shadow-xl rounded-xl py-8 px-8 mb-6">
+                <h2 class="text-2xl font-bold mb-2">Total Requests 200</h2>
+                <p id="totalRequests200" class="text-3xl font-bold">Loading...</p>
+            </div>
+            <div class="bg-white shadow-xl rounded-xl py-8 px-8 mb-6">
+                <h2 class="text-2xl font-bold mb-2">Total Requests 403</h2>
+                <p id="totalRequests403" class="text-3xl font-bold">Loading...</p>
+            </div>
+            <div class="bg-white shadow-xl rounded-xl py-8 px-8 mb-6">
+                <h2 class="text-2xl font-bold mb-2">Average Latency</h2>
+                <p id="averageLatency" class="text-3xl font-bold">Loading...</p>
+            </div>
+        </div>
+        
+        <div class="bg-white shadow-xl rounded-xl overflow-hidden p-6">
             <div class="overflow-x-auto">
                 <table class="min-w-full" id="logsTable">
                     <thead class="bg-gray-50">
-                        <tr>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                        <tr class="font-bold">
+                            <th class="px-6 py-3 text-left text-xs text-gray-500 uppercase tracking-wider">
                                 Timestamp
                             </th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            <th class="px-6 py-3 text-left text-xs text-gray-500 uppercase tracking-wider">
                                 IP Address
                             </th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            <th class="px-6 py-3 text-left text-xs text-gray-500 uppercase tracking-wider">
                                 Risk Score
                             </th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            <th class="px-6 py-3 text-left text-xs text-gray-500 uppercase tracking-wider">
                                 Action
                             </th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            <th class="px-6 py-3 text-left text-xs text-gray-500 uppercase tracking-wider">
                                 Flags
                             </th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            <th class="px-6 py-3 text-left text-xs text-gray-500 uppercase tracking-wider">
                                 Country
                             </th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
